[test] Add a test for a reported regression by Michael Natterer.
mitch reported on irc that expose events in the gimp were suffering from
artifacts which he tracked down to a bug with clipping and source
surfaces. This is the cairo test case for that regression.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -31,6 +31,7 @@ clip-push-group
 clip-twice
 clip-zero
 clipped-group
+clipped-surface
 close-path
 composite-integer-translate-over
 composite-integer-translate-over-repeat
