--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -57,6 +57,7 @@ cairo_private = \
 	cairo-atomic-private.h \
 	cairo-cache-private.h \
 	cairo-clip-private.h \
+	cairo-combsort-private.h \
 	cairo-compiler-private.h \
 	cairo-fixed-private.h \
 	cairo-fixed-type-private.h \
