[perf] Add composite performance test.
Add a new test case to Cairo for checking the performance of Cairo's
equivalent to GDK's gdk_pixbuf_composite_color() operation. That is an
operation that happens to be extremely useful when viewing or editing
transparent images so I think it is important that it is as fast as
possible.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -17,6 +17,7 @@ cairo_perf_SOURCES =		\
 	cairo-stats.c		\
 	cairo-stats.h		\
 	box-outline.c		\
+	composite-checker.c	\
 	fill.c			\
 	long-lines.c		\
 	mosaic.c		\
