--- a/configure.ac
+++ b/configure.ac
@@ -337,7 +337,9 @@ CAIRO_ENABLE_SURFACE_BACKEND(ps, PostScript, yes, [
 
 dnl ===========================================================================
 
+SPECTRE_VERSION_REQUIRED=0.2.0
 test_ps=no
+any2ppm_ps=no
 if test "x$use_ps" = "xyes"; then
   AC_CHECK_PROG(GS, gs, gs)
   if test "$GS"; then
@@ -347,9 +349,16 @@ if test "x$use_ps" = "xyes"; then
     AC_MSG_WARN([PS backend will not be tested since ghostscript is not available])
     test_ps="no (requires ghostscript)"
   fi
+
+  libspectre_DEPENDENCY="libspectre >= $SPECTRE_VERSION_REQUIRED"
+  PKG_CHECK_MODULES(LIBSPECTRE, $libspectre_DEPENDENCY,
+		    [any2ppm_ps=yes],
+		    [AC_MSG_RESULT(no)])
 fi
 
 AM_CONDITIONAL(CAIRO_CAN_TEST_PS_SURFACE, test "x$test_ps" = "xyes")
+AC_SUBST(LIBSPECTRE_CFLAGS)
+AC_SUBST(LIBSPECTRE_LIBS)
 
 dnl ===========================================================================
 
@@ -365,11 +374,12 @@ dnl ===========================================================================
 # enhancement not to gobble nearly 1GiB of memory during test/large-font.
 POPPLER_VERSION_REQUIRED=0.9.2
 test_pdf=no
+any2ppm_pdf=no
 if test "x$use_pdf" = "xyes"; then
   poppler_DEPENDENCY="poppler-glib >= $POPPLER_VERSION_REQUIRED"
   PKG_CHECK_MODULES(POPPLER, $poppler_DEPENDENCY pango gtk+-2.0,
 		    [CAIRO_CHECK_FUNCS_WITH_FLAGS(poppler_page_render, [$POPPLER_CFLAGS], [$POPPLER_LIBS],
-                    [test_pdf=yes],
+                    [test_pdf=yes; any2ppm_pdf=yes],
 		    [AC_MSG_RESULT(no); test_pdf="no (requires $poppler_DEPENDENCY)"])],
 		    [AC_MSG_RESULT(no); test_pdf="no (requires $poppler_DEPENDENCY)"])
   if test "x$test_pdf" = "xyes"; then
@@ -395,11 +405,12 @@ CAIRO_ENABLE_SURFACE_BACKEND(svg, SVG, yes, [
 
 LIBRSVG_VERSION_REQUIRED=2.15.0
 test_svg=no
+any2ppm_svg=no
 if test "x$use_svg" = "xyes"; then
   librsvg_DEPENDENCY="librsvg-2.0 >= $LIBRSVG_VERSION_REQUIRED"
   PKG_CHECK_MODULES(LIBRSVG, $librsvg_DEPENDENCY gdk-2.0,
 		    [CAIRO_CHECK_FUNCS_WITH_FLAGS(rsvg_pixbuf_from_file, [$LIBRSVG_CFLAGS], [$LIBRSVG_LIBS],
-                    [test_svg=yes],
+                    [test_svg=yes; any2ppm_svg=yes],
 		    [AC_MSG_RESULT(no); test_svg="no (requires $librsvg_DEPENDENCY)"])],
 		    [AC_MSG_RESULT(no); test_svg="no (requires $librsvg_DEPENDENCY)"])
   if test "x$test_svg" = "xyes"; then
@@ -436,8 +447,9 @@ CAIRO_ENABLE_FONT_BACKEND(user, user, always)
 dnl ===========================================================================
 dnl Build the external converter if we have any of the test backends
 AM_CONDITIONAL(BUILD_ANY2PPM,
-	       test "x$test_svg" = "xyes" \
-	         -o "x$test_pdf" = "xyes" ) # -o "x$test_ps"  = "xyes")
+	       test "x$any2ppm_svg" = "xyes" \
+	         -o "x$any2ppm_pdf" = "xyes" \
+		 -o "x$any2ppm_ps"  = "xyes")
 
 dnl ===========================================================================
 
