[test] Add huge pattern.
Add a test case to exercise range overflow during gradient construction.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -100,6 +100,7 @@ gradient-alpha
 gradient-constant-alpha
 gradient-zero-stops
 group-paint
+huge-pattern
 imagediff
 image-surface-source
 infinite-join
