--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -77,6 +77,7 @@ gradient-alpha$(EXEEXT)					\
 gradient-constant-alpha$(EXEEXT)			\
 gradient-zero-stops$(EXEEXT)				\
 group-paint$(EXEEXT)					\
+huge-pattern$(EXEEXT)					\
 image-surface-source$(EXEEXT)				\
 infinite-join$(EXEEXT)					\
 in-fill-empty-trapezoid$(EXEEXT)			\
@@ -539,6 +540,7 @@ REFERENCE_IMAGES = \
 	gradient-zero-stops-ref.png	\
 	gradient-zero-stops-rgb24-ref.png	\
 	group-paint-ref.png	\
+	huge-pattern-ref.png	\
 	image-surface-source-ref.png \
 	infinite-join-ref.png	\
 	infinite-join-ps2-ref.png	\
@@ -945,6 +947,7 @@ $(REFERENCE_IMAGES)
 #                         room, with Carl as a moderator and not let them out
 #                         until they have come up with an interface and
 #                         semantics that actually work. :-)
+# huge-pattern          - range overflow of fixed-point
 # long-lines            - range overflow of fixed-point
 # self-copy-overlap     - vector surfaces take snapshot of patterns in contrast
 #                         to the raster backends which don't. One solution
@@ -968,6 +971,7 @@ degenerate-path$(EXEEXT)			\
 device-offset-scale$(EXEEXT)			\
 extend-pad$(EXEEXT)				\
 fallback-resolution$(EXEEXT)			\
+huge-pattern$(EXEEXT)				\
 long-lines$(EXEEXT)				\
 self-copy-overlap$(EXEEXT)			\
 self-intersecting$(EXEEXT)			\
