[pattern] Optimize away fractional translation for NEAREST patterns.
As identified in bug 15479,
  Unpredictable performance of cairo-xlib with non-integer translations of a
  source surface pattern
  (https://bugs.freedesktop.org/show_bug.cgi?id=15479),
source surfaces with a fractional translation hit slow paths for some
drivers, causing seemingly random performance variations. As a work-around
Owen Taylor proposed that cairo could convert non-integer translations on
NEAREST sources patterns to their integer equivalents.

The messy detail involved here is replicating the rounding mode used by
pixman for the sample offset, but otherwise the conversion is fairly
trivial.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -79,6 +79,7 @@ fill-missed-stop
 fill-rule
 filter-bilinear-extents
 filter-nearest-offset
+filter-nearest-transformed
 finer-grained-fallbacks
 ft-text-antialias-none
 ft-font-create-for-ft-face
