[test] Add a spline test.
Test the decomposition of 5 different types of spline curve. Useful test
for future experiments in improving the decomposition algorithm.

Note: the vector targets all need separate reference images due to their
lack of support for cairo_set_tolerance(). Also GS strokes the Bezier
curve differently using offset curves and opposed to transcribing the
outline of a pen.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -204,6 +204,7 @@ solid-pattern-cache-stress
 source-clip
 source-clip-scale
 source-surface-scale-paint
+spline-decomposition
 stroke-image
 stroke-ctm-caps
 surface-finish-twice
