[perf] A crude tool to visualise performance changes across a series.
Generate a cairo-perf-diff graph for a series of commits in order to be
able to identify significant commits. Still very crude, but minimally
functional.

--- a/configure.ac
+++ b/configure.ac
@@ -480,6 +480,9 @@ fi
 
 dnl ===========================================================================
 
+# We use GTK+ for some utility/debugging tools
+PKG_CHECK_MODULES(gtk, "gtk+-2.0",, AC_MSG_RESULT(no))
+
 AC_CONFIG_FILES([
 Makefile
 boilerplate/Makefile
