[test] Add leaky-dashed-stroke
A test case for a leak whilst closing a dashed stroke extracted from the
report by Jeff Muizelaar who found the artifact whilst looking at
  firefox http://people.mozilla.com/~jmuizelaar/BerlinDistricts-check.svg

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -89,6 +89,7 @@ large-font$(EXEEXT)					\
 large-source$(EXEEXT)					\
 leaky-dash$(EXEEXT)					\
 leaky-dashed-rectangle$(EXEEXT)				\
+leaky-dashed-stroke$(EXEEXT)				\
 leaky-polygon$(EXEEXT)					\
 line-width$(EXEEXT)					\
 line-width-scale$(EXEEXT)				\
@@ -596,6 +597,9 @@ REFERENCE_IMAGES = \
 	leaky-dashed-rectangle-ref.png		\
 	leaky-dashed-rectangle-ps2-ref.png	\
 	leaky-dashed-rectangle-ps3-ref.png	\
+	leaky-dashed-stroke-ref.png		\
+	leaky-dashed-stroke-ps2-ref.png		\
+	leaky-dashed-stroke-ps3-ref.png		\
 	leaky-polygon-ref.png	\
 	leaky-polygon-ps2-ref.png	\
 	leaky-polygon-ps3-ref.png	\
