--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1016,6 +1016,13 @@ $(REFERENCE_IMAGES)
 #                         /Interpolate support - which causes a half-pixel
 #                         shift in GS (and consequently virtually every
 #                         image/fallback-image using test to FAIL).
+# user-font-mask	- Two bugs here: an unsigned promotion issue and
+#			  non-negative pattern extents. Chris claims
+#			  to have fixes in hand for both, but doesn't
+#			  feel comfortable pushing them just before
+#			  the 1.8.2 release. So if 1.9.x is open and
+#			  this comment is still here, please pester
+#			  Chris.
 XFAIL_TESTS =					\
 alpha-similar$(EXEEXT)				\
 big-line$(EXEEXT)				\
@@ -1031,7 +1038,8 @@ self-intersecting$(EXEEXT)			\
 surface-pattern$(EXEEXT)			\
 surface-pattern-big-scale-down$(EXEEXT)		\
 surface-pattern-scale-down$(EXEEXT)		\
-surface-pattern-scale-up$(EXEEXT)
+surface-pattern-scale-up$(EXEEXT)		\
+user-font-mask$(EXEEXT)
 
 # Any test that doesn't generate a log file goes here
 NOLOG_TESTS =			\
