--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -928,9 +928,13 @@ REFERENCE_IMAGES = \
 	trap-clip-rgb24-ref.png	\
 	trap-clip-pdf-argb32-ref.png \
 	trap-clip-pdf-rgb24-ref.png \
+	trap-clip-ps2-argb32-ref.png \
+	trap-clip-ps2-rgb24-ref.png \
 	twin-ref.png \
 	twin-ps2-ref.png \
 	twin-ps3-ref.png \
+	twin-svg11-ref.png \
+	twin-svg12-ref.png \
 	unantialiased-shapes-ref.png	\
 	unantialiased-shapes-quartz-ref.png \
 	unbounded-operator-ref.png	\
