Restore the ability to choose the internal font.
Behdad wants to include the feature with 1.10, so we enable it as early as
possible in 1.9 dev cycle to generate as much feedback as possible.

The first change is to use "<cairo>" as being a name unlikely to clash
with any real font names.

This reverts commits:
  a824d284be23793a5c48b9ae833dcb7b2d5fff80,
  292233685534aed712dfd45e8ccf498b792ce496,
  e0046aaf417a61da008dc6374871fa3687ba94ab,
  f534bd549e1e2283735d1eabb60c015a5949a735.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -35,6 +35,7 @@ cairo_perf_SOURCES =		\
 	subimage_copy.c		\
 	tessellate.c		\
 	text.c			\
+	twin.c			\
 	unaligned-clip.c	\
 	world-map.c		\
 	world-map.h		\
