--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -180,6 +180,7 @@ transforms$(EXEEXT)					\
 translate-show-surface$(EXEEXT)				\
 trap-clip$(EXEEXT)					\
 truetype-tables$(EXEEXT)				\
+twin$(EXEEXT)						\
 unantialiased-shapes$(EXEEXT)				\
 unbounded-operator$(EXEEXT)				\
 user-data$(EXEEXT)					\
@@ -929,6 +930,11 @@ REFERENCE_IMAGES = \
 	trap-clip-pdf-rgb24-ref.png \
 	trap-clip-ps2-argb32-ref.png \
 	trap-clip-ps2-rgb24-ref.png \
+	twin-ref.png \
+	twin-ps2-ref.png \
+	twin-ps3-ref.png \
+	twin-svg11-ref.png \
+	twin-svg12-ref.png \
 	unantialiased-shapes-ref.png	\
 	unantialiased-shapes-quartz-ref.png \
 	unbounded-operator-ref.png	\
