Add a COPYING file to each aux. source directory
Include a COPYING inside perf/, test/, util/ to clarify the licensing
conditions beneath the respective directories. This is because cairo
itself (libcairo.so) is LGPL-2.1/MPL-1.1 but that only relates to src/.
The auxiliary source files are under a mix of free licenses and we wish to
be clear just what license applies to each file.

In particular, cairo-trace needs to include the GPL terms and conditions.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS =					\
 	$(CAIRO_CFLAGS)
 
 EXTRA_PROGRAMS += cairo-perf cairo-perf-diff-files cairo-perf-graph-files
-EXTRA_DIST += cairo-perf-diff
+EXTRA_DIST += cairo-perf-diff COPYING
 EXTRA_LTLIBRARIES += libcairoperf.la
 
 LDADD = $(top_builddir)/boilerplate/libcairoboilerplate.la \
