--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -25,5 +25,6 @@ backtrace_symbols_la_LIBADD  = -lbfd -liberty
 malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD) backtrace-symbols.lo
 
 EXTRA_DIST += \
+	COPYING \
 	xr2cairo \
 	cairo-api-update
