[boilerplate/Makefile.win32] Only build source files, not headers

--- a/boilerplate/Makefile.win32
+++ b/boilerplate/Makefile.win32
@@ -4,9 +4,12 @@ include Makefile.win32.features
 
 CFLAGS += -I../src
 
-SOURCES = \
+HEADERS = \
 	$(enabled_cairo_boilerplate_headers) \
 	$(enabled_cairo_boilerplate_private) \
+	$(NULL)
+
+SOURCES = \
 	$(enabled_cairo_boilerplate_sources) \
 	$(NULL)
 
@@ -14,6 +17,7 @@ OBJECTS = $(patsubst %.c, $(CFG)/%.obj, $(SOURCES))
 
 
 all: $(CFG)/boiler.lib
+
 
 $(CFG)/boiler.lib: $(OBJECTS)
 	lib -NOLOGO -OUT:$@ $(OBJECTS) $(WIN_LIBS)
