[mime-data] Allow embedding of arbitrary mime-types.
Use the surface user-data array allow to store an arbitrary set of
alternate image representations keyed by an interned string (which
ensures that it has a unique key in the user-visible namespace).

Update the API to mirror that of cairo_surface_set_user_data() [i.e.
return a status indicator] and switch internal users of the mime-data to
the public functions.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -106,6 +106,7 @@ test_sources = \
 	mask-transformed-image.c			\
 	mask-transformed-similar.c			\
 	meta-surface-pattern.c				\
+	mime-data.c					\
 	miter-precision.c				\
 	move-to-show-surface.c				\
 	new-sub-path.c					\
@@ -687,6 +688,7 @@ REFERENCE_IMAGES = \
 	meta-surface-pattern.svg11.rgb24.ref.png	\
 	meta-surface-pattern.svg12.argb32.ref.png	\
 	meta-surface-pattern.svg12.rgb24.ref.png	\
+	mime-data.ref.png	\
 	miter-precision.ref.png \
 	miter-precision.ps2.ref.png	\
 	miter-precision.ps3.ref.png	\
@@ -994,6 +996,7 @@ EXTRA_DIST +=		\
 6x13.pcf		\
 make-html.pl		\
 romedalen.png		\
+romedalen.jpg		\
 surface-source.c	\
 $(REFERENCE_IMAGES)
 
