[test] Update extend-pad.
extend-pad was not a clear demonstration of the EXTEND_PAD mode, so revamp
it to show the filter extending a 4 pixel surface to cover the entire
output. However, this hides a discrepancy with the vector surfaces that we
cannot prevent the external renders from applying an interpolation to the
border pixels, so we copy the original test to extend-pad-border to check
the desired behaviour on boundary pixels.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -51,6 +51,8 @@ test_sources = \
 	device-offset-positive.c			\
 	device-offset-scale.c				\
 	extend-pad.c					\
+	extend-pad-border.c				\
+	extend-pad-similar.c				\
 	extend-reflect.c				\
 	extend-reflect-similar.c			\
 	extend-repeat.c					\
@@ -439,6 +441,8 @@ REFERENCE_IMAGES = \
 	device-offset.rgb24.ref.png	\
 	device-offset-scale.ref.png	\
 	extend-pad.ref.png	\
+	extend-pad-border.ref.png	\
+	extend-pad-similar.ref.png	\
 	extend-reflect.ref.png	\
 	extend-reflect-similar.ref.png	\
 	extend-reflect-similar.ps2.ref.png	\
