--- a/boilerplate/Makefile.sources
+++ b/boilerplate/Makefile.sources
@@ -36,6 +36,9 @@ cairo_boilerplate_ps_sources = cairo-boilerplate-ps.c
 cairo_boilerplate_quartz_private = cairo-boilerplate-quartz-private.h
 cairo_boilerplate_quartz_sources = cairo-boilerplate-quartz.c
 
+cairo_boilerplate_script_private = cairo-boilerplate-script-private.h
+cairo_boilerplate_script_sources = cairo-boilerplate-script.c
+
 cairo_boilerplate_sdl_private = cairo-boilerplate-sdl-private.h
 cairo_boilerplate_sdl_sources = cairo-boilerplate-sdl.c
 
