[test] Adapt pdf-mime-data for non-srcdir build.
Need to look for reference/input images from srcdir as well.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1002,7 +1002,6 @@ EXTRA_DIST +=		\
 make-html.pl		\
 romedalen.jpg		\
 romedalen.png		\
-romedalen.jpg		\
 surface-source.c	\
 $(REFERENCE_IMAGES)
 
@@ -1219,6 +1218,7 @@ CLEANFILES +=					\
 	pdf-surface-source.pdf			\
 	ps-surface-source.ps			\
 	pdf-features.pdf			\
+	pdf-mime-data.out*			\
 	ps-features.ps				\
 	svg-clip.svg				\
 	svg-surface.svg				\
