[test] Add jpeg.jpg to EXTRA_DIST
Forgot to add the new file to the distribution with the previous commit.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1002,6 +1002,7 @@ REFERENCE_IMAGES = \
 EXTRA_DIST +=		\
 6x13.pcf		\
 make-html.pl		\
+jpeg.jpg		\
 romedalen.jpg		\
 romedalen.png		\
 scarab.jpg		\
